# TaskFlow

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/versions/: 001_initial.py  initial.py
src/: __init__.py  main.py  worker.py
src/api/: __init__.py  dependencies.py
src/api/v1/: __init__.py  endpoints.py  schemas.py
src/core/: __init__.py  config.py  database.py  dependencies.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_service.py  worker.py
tests/: conftest.py  test_api.py  test_services.py
