[tool.poetry]
name = "task-service"
version = "0.1.0"
description = "Асинхронный сервис управления задачами"
authors = ["constantin.fedenko@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiormq = "^6.8.0"
aio-pika = "^9.4.1"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
